Atualização no currículo

--- a/Curriculo.html
+++ b/Curriculo.html
@@ -113,6 +113,7 @@
                 <li><a href="https://www.dio.me/certificate/8617B851/share" target="_blank">Curso: Dominando o protocolo HTTP e intregrando com a PokeAPI (4h)</a></li>
                 <li><a href="https://www.dio.me/certificate/BD54822C/share" target="_blank">Curso: Desafios de Código em JavaScript (5h)</a></li>
                 <li><a href="https://www.dio.me/certificate/F6EB5624/share" target="_blank">Curso: Criando um Projeto com HTML/CSS para Listagem de Pokémon(2h)</a></li>
+                <li><a href="https://www.dio.me/certificate/A52467A3/share" target="_blank">Trabalhando com Web Components no Front-end</a></li>
               </ul>
               <hr>
             </div>
